2003-10-21  Havoc Pennington  <hp@redhat.com>

	* create autotools setup
